syntax = "proto3";
package AiService;

service Transcription {
	rpc TranscriptionBiStreams (stream DiscordOpusPacketList) returns (stream TranscribedText);
}

message DiscordOpusPacket {
	int64 timestamp = 1;
	string speaker_id = 2;
	bytes data = 3;
}

message DiscordOpusPacketList {
	repeated DiscordOpusPacket packets = 1;
	bool is_final = 2;
}

message TranscribedText {
	int64 begin = 1;
	int64 end = 2;
	int64 packet_timestamp = 3;
	string speaker_id = 4;
	string text = 5;
}
